# safekeylab

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPETITOR_DEPLOYMENT_COMPARISON.md  CONTRIBUTING.md  DEPLOY_NOW.sh  Dockerfile  Dockerfile.simple  FINAL_CLEANUP_REPORT.md  GITHUB_PAGES_DEPLOYMENT.md  LICENSE  MANIFEST.in  PERFORMANCE_FINAL_SUMMARY.md  PERFORMANCE_GUIDE.md  PLATFORM_OVERVIEW.md  PUSH_TO_GITLAB.sh  QUICKSTART.md  README.md  aegis_sdk.py  demo_commands.sh  demo_production.py  deploy-to-github.sh  deploy.sh  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  enterprise_launch.sh  launch.sh  live_demo.py  pyproject.toml  quick_deploy.sh  requirements-ci.txt  requirements.txt  setup.py  test_api_server.py  validation_report.json
.github/: SECRETS_SETUP.md
.github/workflows/: benchmark.yml  ci-simple.yml  ci.yml  deploy.yml  deploy.yml.disabled  security.yml  security.yml.disabled
aegis/: __init__.py  multimodal_optimized.py  multimodal_privacy.py  privacy_benchmark.py  privacy_model.py  real_optimized_engine.py  ultimate_engine.py  ultimate_performance_engine.py  ultra_optimized_engine.py
app/: adversarial_protection.py  dashboard.py  main.py  main_enterprise.py  monitoring.py  multimodal_api.py  onboarding.py  training_sanitizer.py
app/core/: config.py  rate_limiter.py  security.py
app/models/: database.py
app/services/: anonymizer.py  pii_detector.py
benchmark/: ACHIEVEMENT_REPORT.md  BENCHMARK_RESULTS.md  OFFICIAL_WORLD_RECORDS.md  REAL_PERFORMANCE_RESULTS.md  accuracy_benchmark.py  benchmark_api.py  benchmark_framework.py  competitive_benchmark.py  honest_competitive_test.py  multimodal_benchmark.py  real_usage_test.py  run_benchmark.py  run_world_domination.py  simple_real_usage_test.py  third_party_validation.py
benchmark/datasets/: test_dataset.json
demo/: DEMO_RECORDING_GUIDE.md  multimodal_demo.py
docs/business/: COMPETITIVE_ANALYSIS.md  ENTERPRISE_SLA.md  PRICING.md
docs/deployment/: AWS_SETUP.md  DEPLOY.md  ENTERPRISE_DEPLOYMENT_CHECKLIST.md
docs/legal/: PATENT_USPTO_FINAL.md  PROVISIONAL_PATENT.md
docs/technical/: CUSTOMER_INTEGRATION_GUIDE.md  MULTIMODAL_BENCHMARK_RESULTS.md  PERFORMANCE_IMPROVEMENT_ROADMAP.md  SECURITY.md  USE_CASES.md
k8s/production/: database.yaml  deployment.yaml  namespace.yaml  service.yaml
monitoring/: prometheus.yml
nginx/: nginx.conf
reports/: 2024_AI_PRIVACY_REPORT.md
sales/: COMPLIANCE_DIFFERENTIATION.md  ENTERPRISE_OUTREACH.md  FORTUNE_1000_AI_TARGETS.md  HIGH_PRIORITY_EMAILS.md  OUTREACH_PLAYBOOK.md  email_template_anthropic.txt  email_template_openai.txt
scripts/: generate_api_key.py  init_db.py  init_db.sql  setup_ssl.sh
sdk/python/: README.md  aegis_sdk.py  setup.py
terraform/aws/: main.tf
tests/: comprehensive_test.py  validation_enterprise.py
website/: .env.example  .env.production  .eslintrc.json  CNAME  DEPLOYMENT_CHECKLIST.md  INVESTOR_UNIQUE_VALUE_PROP.md  LAUNCH_CHECKLIST.md  LAUNCH_NOW.md  README.md  REALITY_CHECK.md  REAL_PRODUCT_NOW_LIVE.md  about.html  aegis.db  aegis_real_api.py  api-reference.html  checkout.html  contact-modern.html  contact.html  dashboard.html  docs-gated.html  docs-modern.html  docs.html  documentation.html  features-modern.html  features.html  index-modern.html  index-safe.html  index.html  login.html  package-lock.json  package.json  pricing-modern.html  pricing.html  register.html  script.js  sdks.html  security.html  settings.html  styles-modern.css  styles.css  (+3 more)
website/js/: api.js  config.js  dashboard-data.js  dashboard.js  utils.js
